RESOLVED FIXED294451
Release Assert in WebCore::CSSPrimitiveValue::create called from Style::ExtractorCustom::extractValueVerticalAlign
https://bugs.webkit.org/show_bug.cgi?id=294451
Summary Release Assert in WebCore::CSSPrimitiveValue::create called from Style::Extr...
Anil Hebbar
Reported 2025-06-13 12:00:47 PDT
Created attachment 475566 [details] HTML test script to reproduce the error Release Assert triggered due to SHOULD NEVER BE REACHED condition in case statement when running the test script below
Attachments
HTML test script to reproduce the error (551 bytes, text/html)
2025-06-13 12:00 PDT, Anil Hebbar
no flags
Anil Hebbar
Comment 1 2025-06-13 17:12:44 PDT
Anil Hebbar
Comment 2 2025-06-13 17:13:09 PDT
Anil Hebbar
Comment 3 2025-06-25 13:16:17 PDT
EWS
Comment 4 2025-06-26 13:13:01 PDT
Committed 296678@main (6165a0388d37): <https://commits.webkit.org/296678@main> Reviewed commits have been landed. Closing PR #47203 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.